# batch

./: Makefile  README.md  pyproject.toml
app/: main.py
app/infrastructure/: bedrock_chat_llm_client.py
app/services/: llm_chat_service.py
app/services/gateways/: chat_llm_client.py
