[project]
name = "batch"
version = "0.1.0"
description = "batch"
authors = [
    {name = "Ryuta Otsuka"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "langchain-aws (>=0.2.29,<0.3.0)",
    "langchain (>=0.3.27,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
